@@ -1,0 +1,154 @@
+/* ===========================================================
+ * JFreeChart : a free chart library for the Java(tm) platform
+ * ===========================================================
+ *
+ * (C) Copyright 2000-2007, by Object Refinery Limited and Contributors.
+ *
+ * Project Info:  http://www.jfree.org/jfreechart/index.html
+ *
+ * This library is free software; you can redistribute it and/or modify it 
+ * under the terms of the GNU Lesser General Public License as published by 
+ * the Free Software Foundation; either version 2.1 of the License, or 
+ * (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful, but 
+ * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
+ * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public 
+ * License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, 
+ * USA.  
+ *
+ * [Java is a trademark or registered trademark of Sun Microsystems, Inc. 
+ * in the United States and other countries.]
+ *
+ * ----------------------------------
+ * XYSplineAndShapeRendererTests.java
+ * ----------------------------------
+ * (C) Copyright 2007, by Object Refinery Limited and Contributors.
+ *
+ * Original Author:  David Gilbert (for Object Refinery Limited);
+ * Contributor(s):   -;
+ *
+ * $Id: XYLineAndShapeRendererTests.java,v 1.1.2.4 2007/05/17 16:23:31 mungady Exp $
+ *
+ * Changes
+ * -------
+ * 25-Jul-2007 : Version 1 (DG);
+ * 
+ */
+
+package org.jfree.chart.renderer.xy.junit;
+
+import java.awt.geom.Rectangle2D;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.ObjectInput;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutput;
+import java.io.ObjectOutputStream;
+
+import junit.framework.Test;
+import junit.framework.TestCase;
+import junit.framework.TestSuite;
+
+import org.jfree.chart.renderer.xy.XYSplineAndShapeRenderer;
+
+/**
+ * Tests for the {@link XYSplineAndShapeRenderer} class.
+ */
+public class XYSplineAndShapeRendererTests extends TestCase {
+
+    /**
+     * Returns the tests as a test suite.
+     *
+     * @return The test suite.
+     */
+    public static Test suite() {
+        return new TestSuite(XYSplineAndShapeRendererTests.class);
+    }
+
+    /**
+     * Constructs a new set of tests.
+     *
+     * @param name  the name of the tests.
+     */
+    public XYSplineAndShapeRendererTests(String name) {
+        super(name);
+    }
+
+    /**
+     * Test that the equals() method distinguishes all fields.
+     */
+    public void testEquals() {
+        
+        XYSplineAndShapeRenderer r1 = new XYSplineAndShapeRenderer();
+        XYSplineAndShapeRenderer r2 = new XYSplineAndShapeRenderer();
+        assertEquals(r1, r2);
+        assertEquals(r2, r1);
+    
+        r1.setPrecision(9);
+        assertFalse(r1.equals(r2));
+        r2.setPrecision(9);
+        assertTrue(r1.equals(r2));
+    }
+
+    /**
+     * Two objects that are equal are required to return the same hashCode. 
+     */
+    public void testHashcode() {
+        XYSplineAndShapeRenderer r1 = new XYSplineAndShapeRenderer();
+        XYSplineAndShapeRenderer r2 = new XYSplineAndShapeRenderer();
+        assertTrue(r1.equals(r2));
+        int h1 = r1.hashCode();
+        int h2 = r2.hashCode();
+        assertEquals(h1, h2);
+    }
+    
+    /**
+     * Confirm that cloning works.
+     */
+    public void testCloning() {
+        Rectangle2D legendShape = new Rectangle2D.Double(1.0, 2.0, 3.0, 4.0);
+        XYSplineAndShapeRenderer r1 = new XYSplineAndShapeRenderer();
+        r1.setLegendLine(legendShape);
+        XYSplineAndShapeRenderer r2 = null;
+        try {
+            r2 = (XYSplineAndShapeRenderer) r1.clone();
+        }
+        catch (CloneNotSupportedException e) {
+            e.printStackTrace();
+        }
+        assertTrue(r1 != r2);
+        assertTrue(r1.getClass() == r2.getClass());
+        assertTrue(r1.equals(r2));
+    }
+
+    /**
+     * Serialize an instance, restore it, and check for equality.
+     */
+    public void testSerialization() {
+
+        XYSplineAndShapeRenderer r1 = new XYSplineAndShapeRenderer();
+        XYSplineAndShapeRenderer r2 = null;
+        try {
+            ByteArrayOutputStream buffer = new ByteArrayOutputStream();
+            ObjectOutput out = new ObjectOutputStream(buffer);
+            out.writeObject(r1);
+            out.close();
+
+            ObjectInput in = new ObjectInputStream(
+                    new ByteArrayInputStream(buffer.toByteArray()));
+            r2 = (XYSplineAndShapeRenderer) in.readObject();
+            in.close();
+        }
+        catch (Exception e) {
+            e.printStackTrace();
+        }
+        assertEquals(r1, r2);
+
+    }
+
+}
